add angular-material and improve UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
-<!-- Navigation Bar -->
-<nav class="navbar">
-  <a routerLink="/login" routerLinkActive="active-link">Login</a>
-  <a routerLink="/home" routerLinkActive="active-link">Home</a>
-  <!-- Add more navigation links as needed -->
+<nav class="navbar center-content-horizontal" mat-elevation-z3>
+  <a mat-button routerLink="/login" routerLinkActive="active-link">Login</a>
+  <a mat-button routerLink="/home" routerLinkActive="active-link">Home</a>  
 </nav>
 
-<!-- Router Outlet -->
 <router-outlet></router-outlet>
