--- a/src/app/oauth/login/login.component.html
+++ b/src/app/oauth/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="login-container">
-    <h2>Welcome Back!</h2>
-    <p>You need to log in to access the application.</p>
-    <button (click)="login()">Log In</button>
+<div class="center-content-vertical login-container mat-elevation-z2">
+    <h2 class="login-title mat-title">Welcome Back!</h2>
+    <p class="login-message mat-body">You need to log in to access the application.</p>
+    <button mat-raised-button color="primary" class="login-button" (click)="login()">Log In</button>
 </div>
