--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,40 @@
-<h1>Welcome Home!</h1>
-<p>Congratulations on successfully logging in. Your journey has just begun!</p>
-------
-<div class="login-container">
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" [(ngModel)]="username" class="form-control">
+<div class="center-content-vertical">
+    <div class="center-content-horizontal">
+        <h1 class="home-title mat-display-1">Welcome Home!</h1>
     </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" [(ngModel)]="password" class="form-control">
-    </div>
-    <button (click)="login()" class="btn btn-primary">Login</button>
+    
+    <div class="login-container mat-card">
+        <div class="form-group">
+            <mat-form-field appearance="fill">
+                <mat-label>Username</mat-label>
+                <input matInput type="text" [(ngModel)]="username">
+            </mat-form-field>
+        </div>
+        <div class="form-group">
+            <mat-form-field appearance="fill">
+                <mat-label>Password</mat-label>
+                <input matInput type="password" [(ngModel)]="password">
+            </mat-form-field>
+        </div>
+        <div class="form-group">
+            <button mat-raised-button color="primary" class="full-width-button" (click)="login()">Login</button>
+        </div>
 
-    <div class="form-group">
-        <label for="callerNumber">Caller Number:</label>
-        <input type="text" id="callerNumber" [(ngModel)]="callerNumber" class="form-control">
+        <div class="form-group">
+            <mat-form-field appearance="fill">
+                <mat-label>Caller Number</mat-label>
+                <input matInput type="text" [(ngModel)]="callerNumber">
+            </mat-form-field>
+        </div>
+        <div class="form-group action-buttons">
+            <button mat-raised-button color="primary" (click)="call()">Call</button>
+            <button mat-raised-button color="warn" (click)="hangUp()">Hang Up</button>
+        </div>
     </div>
-    <div class="action-buttons">
-        <button (click)="call()" class="btn btn-success">Call</button>
-        <button (click)="hangUp()" class="btn btn-danger">Hang Up</button>
-    </div>
-</div>
 
-<div class="messages-display">
-    <ul class="message-list">
-        <li *ngFor="let message of messages" class="message-item">{{ message }}</li>
-    </ul>
+    <div class="center-content-horizontal messages-display mat-elevation-z2">
+        <mat-list class="message-list">
+            <mat-list-item *ngFor="let message of messages" class="message-item" style="word-wrap: break-word;">{{ message }}</mat-list-item>
+        </mat-list>
+    </div>
 </div>
