--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,24 @@
-<nav class="navbar center-content-horizontal" mat-elevation-z3>
-  <a mat-button routerLink="/login" routerLinkActive="active-link">Login</a>
-  <a mat-button routerLink="/home" routerLinkActive="active-link">Home</a>  
-</nav>
+<mat-sidenav-container class="sidenav-container" autosize>
+  <mat-sidenav #sidenav mode="side" opened="true" fixedInViewport="true">
+    
+    <mat-toolbar>InnovaSpeak</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item>
+        <mat-icon>account_circle</mat-icon>
+        Profile
+      </a>
+      <a mat-list-item>
+        <mat-icon>message</mat-icon>
+        Messages
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+  
+  <mat-sidenav-content>    
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
-<router-outlet></router-outlet>
+<footer class="footer">
+  © 2024 InnovaSpeak. All rights reserved.
+</footer>
