--- a/src/app/voice-chat-interface/voice-chat-interface.component.css
+++ b/src/app/voice-chat-interface/voice-chat-interface.component.css
@@ -43,3 +43,51 @@
   }
   
   
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.ptt-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.settings-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.push-to-talk-button {
+  margin: 200px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: pulse-animation 10s infinite;
+}
+
+.animated-button {
+  animation: pulse-animation 10s infinite;    
+}
+
+@keyframes pulse-animation {
+  0% {
+    transform: scale(1.5);
+  }
+  70% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1.5);
+  }
+}
+
+.push-to-talk-button > span {
+  font-size: 1.2rem; /* Larger font size */
+  margin-top: 25px; /* Adjust spacing */
+  margin-bottom: -30px; /* Adjust spacing */
+}
+  
