--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<div *ngIf="isDesktop; else mobileContent">
-  <app-browser-home></app-browser-home>
+<div *ngIf="isAuthenticated; else useRouter">
+
+  <div *ngIf="isDesktop; else mobileContent">
+    <app-browser-home></app-browser-home>
+  </div>
+  <ng-template #mobileContent>
+    This can be your mobile view :D
+  </ng-template>
+
 </div>
-<ng-template #mobileContent>
-  This can be your mobile view :D
+<ng-template #useRouter>
+  <router-outlet></router-outlet>
 </ng-template>
