show the voice-chat component in mobile view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <app-browser-home></app-browser-home>
   </div>
   <ng-template #mobileContent>
-    This can be your mobile view :D
+    <app-voice-chat-interface>
+    </app-voice-chat-interface>
   </ng-template>
 
 </div>
