--- a/src/app/voice-chat-interface/voice-chat-interface.component.html
+++ b/src/app/voice-chat-interface/voice-chat-interface.component.html
@@ -1,28 +1,35 @@
 <mat-card class="call-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Call with Jane Doe</mat-card-title>
-    <mat-card-subtitle>Duration: 00:02:34</mat-card-subtitle>
+    <mat-card-title>Call with Grace</mat-card-title>
+    <mat-card-subtitle>Duration: <span *ngIf="callDuration$ | async as duration">{{duration}}</span></mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content class="content-with-button">
     <div class="chat-messages">
-      <div class="message" *ngFor="let message of messages">
+      <div class="message" *ngFor="let message of messages$ | async">
         <div class="message-author">{{message.author}}:</div>
         <div class="message-text">{{message.text}}</div>
       </div>
     </div>
 
+    <button mat-raised-button color="accent" (click)="startCall()" *ngIf="!isCallStarted">
+      <mat-icon>call</mat-icon>
+      Start Call
+    </button>
+
     <mat-divider></mat-divider>
+
   </mat-card-content>
 
   <mat-card-actions class="ptt-actions">
+
     <div class="settings-button">
-      <button mat-icon-button aria-label="Settings">
+      <button mat-icon-button>
         <mat-icon>settings</mat-icon>
       </button>
     </div>
-  
+
     <div class="push-to-talk-button">
       <button mat-fab color="primary" class="animated-button" (mousedown)="startTalking()" (mouseup)="stopTalking()">
         <mat-icon>mic</mat-icon>
