--- a/src/app/browser-home/browser-home.component.css
+++ b/src/app/browser-home/browser-home.component.css
@@ -25,15 +25,15 @@
   }
 
   .example-card-header {
-      margin: 0px;
-      padding: 0px;
+      margin: 0px,0px,0px,0px;      
+      padding: 0px, 0px, 0px, 0px;
   }
 
-  .example-header-image {
+  .example-header-image {    
       background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
       background-size: cover;
-      margin-top: 5px;
-      margin-bottom: 5px;
+      margin: 0px;
+      padding: 0px;
   }
 
   .footer {
