--- a/src/app/browser-home/browser-home.component.html
+++ b/src/app/browser-home/browser-home.component.html
@@ -51,7 +51,7 @@
 
                         <mat-card class="example-card">
                             <mat-card-header class="example-card-header">
-                                <div mat-card-avatar class="example-header-image"></div>
+                                <img mat-card-avatar src="assets/images/avatar-grace.jpg" alt="Avatar">
                                 <mat-card-title>{{avatar.name}}</mat-card-title>
                                 <mat-card-subtitle>{{avatar.description}}</mat-card-subtitle>
                             </mat-card-header>
@@ -76,32 +76,33 @@
 
                 <mat-card class="example-card">
                     <mat-card-header class="component-card-header">
-                        <mat-card-title>Shiba Inu</mat-card-title>
-                        <mat-card-subtitle>The Dodgecoin Guru</mat-card-subtitle>
+                      <mat-card-title>{{ aiAvatar.name }}</mat-card-title>
+                      <mat-card-subtitle>{{ aiAvatar.subtitle }}</mat-card-subtitle>
                     </mat-card-header>
-
-                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                        alt="Photo of a Shiba Inu">
-
+                  
+                    <img mat-card-image [src]="aiAvatar.imageUri"
+                        alt="Illustration representing the AI Avatar"
+                        style="border-radius: 50px; margin: 10px;">
+                  
                     <mat-card-content>
-                        <p>{{ longText }}</p>
-                        <mat-divider></mat-divider>
-
-                        <div *ngFor="let bar of bars">
-                            <span>{{ bar.label }}</span>
-                            <mat-progress-bar mode="determinate" [value]="bar.value"></mat-progress-bar>
-                        </div>
-
-                        <mat-divider></mat-divider>
-
+                      <p>{{ aiAvatar.longText }}</p>
+                      <mat-divider></mat-divider>
+                  
+                      <div *ngFor="let trait of aiAvatar.personalityTraits">
+                        <span>{{ trait.label }}</span>
+                        <mat-progress-bar mode="determinate" [value]="trait.value"></mat-progress-bar>
+                      </div>
+                  
+                      <mat-divider></mat-divider>
+                  
                     </mat-card-content>
                     <mat-card-actions>
-                        <button mat-button>LIKE</button>
-                        <button mat-button>SHARE</button>
-                        <span class="example-spacer"></span>
-                        <button mat-raised-button color="accent">SEND FEEDBACK</button>
+                      <button mat-button>LIKE</button>
+                      <button mat-button>SHARE</button>
+                      <span class="example-spacer"></span>
+                      <button mat-raised-button color="accent">SEND FEEDBACK</button>
                     </mat-card-actions>
-                </mat-card>
+                  </mat-card>
 
             </mat-card-content>
         </mat-card>
