--- a/src/app/browser-home/browser-home.component.css
+++ b/src/app/browser-home/browser-home.component.css
@@ -3,12 +3,11 @@
   }
 
   .component-card {
-      border: 1px solid #ccc;
+      border: 1px solid;
       border-radius: 15px;
       padding: 5px;
       display: flex;
       flex-direction: column;
-
       height: 100%;
       width: 100%;
   }
@@ -42,8 +41,7 @@
       text-align: center;
       padding: 0px 0;
       padding-bottom: 10px;
-      background-color: #f5f5f5;
-      border-top: 1px solid #e0e0e0;
+      border-top: 1px solid;
   }
 
   .header-toolbar {
