--- a/src/app/voice-chat-interface/voice-chat-interface.component.css
+++ b/src/app/voice-chat-interface/voice-chat-interface.component.css
@@ -7,7 +7,7 @@
   .call-card {
     display: flex;
     flex-direction: column;
-    height: 100%; /* Ensure the card expands to fill the container */
+    height: 100%;
   }
   
   .content-with-button {
