--- a/src/app/voice-chat-interface/voice-chat-interface.component.html
+++ b/src/app/voice-chat-interface/voice-chat-interface.component.html
@@ -1,25 +1,28 @@
 <mat-card class="call-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Call with Grace</mat-card-title>
-    <mat-card-subtitle>Duration: <span *ngIf="callDuration$ | async as duration">{{duration}}</span></mat-card-subtitle>
+    <mat-card-title>{{ aiAvatar.name }}</mat-card-title>    
+    <mat-card-subtitle>{{ aiAvatar.subtitle }}</mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content class="content-with-button">
-    <div class="chat-messages">
-      <div class="message" *ngFor="let message of messages$ | async">
-        <div class="message-author">{{message.author}}:</div>
-        <div class="message-text">{{message.text}}</div>
-      </div>
-    </div>
+
+    <img mat-card-image [src]="aiAvatar.imageUri" alt="Illustration representing the AI Avatar"
+        style="border-radius: 10%; margin: 10px auto; display: block; max-width: 600px; width: 100%; height: auto;">
+    <mat-card-subtitle *ngIf="!isCallStarted">{{ aiAvatar.longText }}</mat-card-subtitle>       
 
     <button mat-raised-button color="accent" (click)="startCall()" *ngIf="!isCallStarted">
       <mat-icon>call</mat-icon>
       Start Call
     </button>
 
+    <div class="chat-messages">
+      <div class="message" *ngFor="let message of messages$ | async">
+        <div class="message-author">{{message.author}}:</div>
+        <div class="message-text">{{message.text}}</div>
+      </div>
+    </div>
+    
     <mat-divider></mat-divider>
-
   </mat-card-content>
 
   <mat-card-actions class="ptt-actions">
@@ -39,6 +42,8 @@
   </mat-card-actions>
 
   <mat-card-footer>
+    <mat-card-subtitle>Call Duration: <span
+        *ngIf="callDuration$ | async as duration">{{duration}}</span></mat-card-subtitle>
     <mat-divider></mat-divider>
     <div class="status-display">
       <ng-container *ngIf="callStatus === 'speaking'; else notSpeaking">
