--- a/src/app/browser-home/browser-home.component.html
+++ b/src/app/browser-home/browser-home.component.html
@@ -6,8 +6,8 @@
         <span class="example-spacer"></span>
 
         <button mat-button>
-            <mat-icon>info</mat-icon>
-            About
+            <mat-icon>verified_user</mat-icon>
+            100% Data Privacy
         </button>
 
     </mat-toolbar-row>
